Configure multi-page build with route-specific OG tags

--- a/plataforma.html
+++ b/plataforma.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       property="og:title"
-      content="Civiles Pro — Plantillas y Herramientas para Obra"
+      content="Plataforma Civiles Pro — Calcula materiales y presupuestos"
     />
     <meta
       property="og:description"
-      content="Compra segura por PayPal las plantillas de Civiles Pro. Entrega inmediata después de pagar. Soporte técnico en todo momento."
+      content="Accede desde cualquier dispositivo. Compra segura por PayPal o Wompi. Activación inmediata y soporte técnico."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.civilespro.com/" />
+    <meta property="og:url" content="https://www.civilespro.com/plataforma" />
     <meta
       property="og:image"
-      content="https://www.civilespro.com/img/og/home-1200x630.jpg"
+      content="https://www.civilespro.com/img/og/plataforma-1200x630.jpg"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -24,17 +24,17 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Civiles Pro — Plantillas y Herramientas para Obra"
+      content="Plataforma Civiles Pro — Calcula materiales y presupuestos"
     />
     <meta
       name="twitter:description"
-      content="Compra segura por PayPal las plantillas de Civiles Pro. Entrega inmediata después de pagar. Soporte técnico en todo momento."
+      content="Acceso web y móvil. Pago seguro, activación inmediata y soporte."
     />
     <meta
       name="twitter:image"
-      content="https://www.civilespro.com/img/og/home-1200x630.jpg"
+      content="https://www.civilespro.com/img/og/plataforma-1200x630.jpg"
     />
-    <title>Civiles Pro — Plantillas y Herramientas para Obra</title>
+    <title>Plataforma Civiles Pro — Calcula materiales y presupuestos</title>
   </head>
   <body>
     <div id="root"></div>
