--- a/index.html
+++ b/index.html
@@ -14,12 +14,9 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.civilespro.com/" />
-    <meta
-      property="og:image"
-      content="https://www.civilespro.com/img/og/home-1200x630.jpg"
-    />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image" content="https://www.civilespro.com/img/og/home-1200x1200.jpg" />
+      <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="1200" />
     <meta property="og:site_name" content="Civiles Pro" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
@@ -32,7 +29,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.civilespro.com/img/og/home-1200x630.jpg"
+      content="https://www.civilespro.com/img/og/home-1200x1200.jpg"
     />
     <title>Civiles Pro — Plantillas y Herramientas para Obra</title>
   </head>
