--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://www.civilespro.com/" />
+    <meta
+      name="description"
+      content="Compra segura por PayPal las plantillas de Civiles Pro. Entrega inmediata después de pagar. Soporte técnico en todo momento."
+    />
     <meta
       property="og:title"
       content="Civiles Pro — Plantillas y Herramientas para Obra"
@@ -15,8 +20,17 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.civilespro.com/" />
     <meta property="og:image" content="https://www.civilespro.com/img/og/home-1200x1200.jpg" />
-      <meta property="og:image:width" content="1200" />
+    <meta
+      property="og:image:secure_url"
+      content="https://www.civilespro.com/img/og/home-1200x1200.jpg"
+    />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="1200" />
+    <meta
+      property="og:image:alt"
+      content="Portada de Civiles Pro con plantillas para obra"
+    />
     <meta property="og:site_name" content="Civiles Pro" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
