--- a/plataforma.html
+++ b/plataforma.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="canonical" href="https://www.civilespro.com/plataforma" />
+    <meta
+      name="description"
+      content="Accede desde cualquier dispositivo a la Plataforma Civiles Pro. Compra segura por PayPal o Wompi, activación inmediata y soporte técnico."
+    />
     <meta
       property="og:title"
       content="Plataforma Civiles Pro — Calcula materiales y presupuestos"
@@ -18,8 +23,17 @@
       property="og:image"
       content="https://www.civilespro.com/img/og/plataforma-1200x1200.jpg"
     />
+    <meta
+      property="og:image:secure_url"
+      content="https://www.civilespro.com/img/og/plataforma-1200x1200.jpg"
+    />
+    <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="1200" />
+    <meta
+      property="og:image:alt"
+      content="Portada de la plataforma Civiles Pro"
+    />
     <meta property="og:site_name" content="Civiles Pro" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta
