--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Compra segura por PayPal las plantillas de Civiles Pro. Entrega inmediata después de pagar. Soporte técnico en todo momento."
     />
+    <!-- Open Graph -->
     <meta
       property="og:title"
       content="Civiles Pro — Plantillas y Herramientas para Obra"
@@ -19,19 +20,24 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.civilespro.com/" />
-    <meta property="og:image" content="https://www.civilespro.com/img/og/home-1200x1200.jpg" />
+    <meta
+      property="og:image"
+      content="https://www.civilespro.com/img/og/home-1200x630.jpg?v=2"
+    />
     <meta
       property="og:image:secure_url"
-      content="https://www.civilespro.com/img/og/home-1200x1200.jpg"
+      content="https://www.civilespro.com/img/og/home-1200x630.jpg?v=2"
     />
-    <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta
       property="og:image:alt"
-      content="Portada de Civiles Pro con plantillas para obra"
+      content="Plantillas de Excel y herramientas de Civiles Pro"
     />
     <meta property="og:site_name" content="Civiles Pro" />
+    <meta property="og:locale" content="es_LA" />
+
+    <!-- Twitter (algunos clientes lo usan) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
@@ -43,7 +49,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.civilespro.com/img/og/home-1200x1200.jpg"
+      content="https://www.civilespro.com/img/og/home-1200x630.jpg?v=2"
     />
     <title>Civiles Pro — Plantillas y Herramientas para Obra</title>
   </head>
