--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     <meta property="og:url" content="https://www.civilespro.com/" />
     <meta
       property="og:image"
-      content="https://www.civilespro.com/img/og/home-1200x630.jpg?v=2"
+      content="https://www.civilespro.com/img/og/home.jpg?v=2"
     />
     <meta
       property="og:image:secure_url"
-      content="https://www.civilespro.com/img/og/home-1200x630.jpg?v=2"
+      content="https://www.civilespro.com/img/og/home.jpg?v=2"
     />
     <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
+    <meta property="og:image:height" content="1200" />
     <meta
       property="og:image:alt"
       content="Plantillas de Excel y herramientas de Civiles Pro"
@@ -49,7 +49,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://www.civilespro.com/img/og/home-1200x630.jpg?v=2"
+      content="https://www.civilespro.com/img/og/home.jpg?v=2"
     />
     <title>Civiles Pro — Plantillas y Herramientas para Obra</title>
   </head>
