Improve social sharing metadata

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
       property="og:image:secure_url"
       content="https://www.civilespro.com/img/og/home.jpg?v=2"
     />
+    <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta
       property="og:image:alt"
       content="Plantillas de Excel y herramientas de Civiles Pro"
@@ -50,6 +51,10 @@
     <meta
       name="twitter:image"
       content="https://www.civilespro.com/img/og/home.jpg?v=2"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="Plantillas de Excel y herramientas de Civiles Pro"
     />
     <title>Civiles Pro — Plantillas y Herramientas para Obra</title>
   </head>
