--- a/index.html
+++ b/index.html
@@ -56,6 +56,32 @@
       name="twitter:image:alt"
       content="Plantillas de Excel y herramientas de Civiles Pro"
     />
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "Organization",
+            "@id": "https://www.civilespro.com/#organization",
+            "name": "Civiles Pro",
+            "url": "https://www.civilespro.com/",
+            "logo": {
+              "@type": "ImageObject",
+              "url": "https://www.civilespro.com/logociviles.png"
+            }
+          },
+          {
+            "@type": "WebSite",
+            "@id": "https://www.civilespro.com/#website",
+            "url": "https://www.civilespro.com/",
+            "name": "Civiles Pro",
+            "publisher": {
+              "@id": "https://www.civilespro.com/#organization"
+            }
+          }
+        ]
+      }
+    </script>
     <title>Civiles Pro — Plantillas y Herramientas para Obra</title>
   </head>
   <body>
